--- a/src/app/ejercicio-page/ejercicio-page.component.html
+++ b/src/app/ejercicio-page/ejercicio-page.component.html
@@ -1,11 +1,62 @@
 <ngx-loading [show]="preload" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 <div *ngIf="!preload" class="container-principal full-width">
-    <form autocomplete="off" [formGroup]="ejercicioForm" (ngSubmit)="createEjercicio()" style="width: 350px">
-        <div>
-            <span class="principal-title">CREAR NUEVO EJERCICIO </span>
-        </div>
-        <div>
-            <span class="secondary-title center-horizontal" style="margin-bottom: 1em">Nombre del ejercicio</span
+    <div *ngIf="!isCreating" class="table-style">
+        <span class="principal-title">LISTADO DE EJERCICIOS</span>
+        <button class="btn-send" mat-raised-button type="button" (click)="crearEjercicio()">
+      <span>Crear</span>
+    </button>
+
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="numero">
+                <th mat-header-cell *matHeaderCellDef>Número</th>
+                <td mat-cell *matCellDef="let element">{{ element.idEjercicio }}</td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.nombreEjercicio }}
+                </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="descripcion">
+                <th mat-header-cell *matHeaderCellDef>Descripción</th>
+                <td mat-cell *matCellDef="let element">{{ element.dscEjercicio }}</td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="tipo">
+                <th mat-header-cell *matHeaderCellDef>Tipo</th>
+                <td mat-cell *matCellDef="let element">
+                    <span class="badge badge-success" [ngStyle]="{ 'background-color': color }">{{ element.tipoEjercicio.dscTipoEjercicio }}</span
+          >
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+
+  <!-- SEGUNDA PARTE -->
+  <form
+    *ngIf="isCreating"
+    autocomplete="off"
+    [formGroup]="ejercicioForm"
+    (ngSubmit)="createEjercicio()"
+    style="width: 350px"
+  >
+    <div>
+      <span class="principal-title">CREAR NUEVO EJERCICIO </span>
+    </div>
+    <div>
+        <span class="secondary-title center-horizontal" style="margin-bottom: 1em">Nombre del ejercicio</span
       >
     </div>
     <div class="center-horizontal">
@@ -52,7 +103,7 @@
           <mat-label>Tipo</mat-label>
           <mat-select formControlName="tipoEjercicio" name="tipoEjercicio">
             <mat-option
-              *ngFor="let tipoEjercicio of listaDeEjercicios.list"
+              *ngFor="let tipoEjercicio of listaDeTiposDeEjercicios.list"
               [value]="tipoEjercicio.idTipoEjercicio"
             >
               {{ tipoEjercicio.dscTipoEjercicio }}
@@ -66,11 +117,11 @@
     <div class="btn-section center-horizontal" style="margin-top: 15em">
       <button class="btn-send" mat-raised-button type="submit">
         <span>Crear</span>
-            </button>
+        </button>
 
-            <button mat-button type="button" (click)="cancelProcess()">
+        <button mat-button type="button" (click)="cancelProcess()">
         <span>Cancelar</span>
       </button>
-        </div>
+    </div>
     </form>
 </div>
