--- a/src/app/ejercicio-page/ejercicio-page.component.scss
+++ b/src/app/ejercicio-page/ejercicio-page.component.scss
@@ -27,3 +27,17 @@
 mat-form-field {
     width: 350px !important;
 }
+
+table {
+    width: 100% !important;
+}
+
+td,
+th {
+    width: 30% !important;
+}
+
+.table-style {
+    width: 700px !important;
+    height: 100% !important;
+}
