--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
         </div>
 
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item active nav-item active">
                 <a class="nav-link" [routerLink]="'/inicio'">Inicio </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="'/ejercicio'">Ejercicios</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Otro menú</a>
+                <a class="nav-link" [routerLink]="'/especialistas'">Especialistas</a>
             </li>
         </ul>
     </mat-drawer>
