--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,1 +1,12 @@
-<img src="../../assets/img/background1.jpg" alt="background-exercise" />
+<div class="img-container">
+    <div class="centered principal-title full-width">
+        <span class="animate__animated animate__backInUp">BIENVENIDO AL MEJOR GIMNASIO</span
+    >
+  </div>
+  <div class="centered full-width" style="margin-top: 5em">
+    <span class="principal-title animate__animated animate__backInUp"
+      >DE ¡TUNJA!</span
+    >
+  </div>
+  <img src="../../assets/img/background1.jpg" alt="background-exercise" />
+</div>
