--- a/src/app/especialista/especialista.component.html
+++ b/src/app/especialista/especialista.component.html
@@ -26,7 +26,7 @@
         <div class="center-horizontal">
             <mat-form-field class="example full-width" appearance="fill">
                 <mat-label>Tarjeta profesional</mat-label>
-                <input matInput formControlName="tarjetaProfesional" name="tarjetaProfesional" />
+                <input matInput formControlName="tarjetaProfesional" name="tarjetaProfesional" maxlength="12" />
                 <mat-error *ngIf="tarjetaIsInvalid"> *Campo requerido* </mat-error>
             </mat-form-field>
         </div>
@@ -41,9 +41,9 @@
                 <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
                 <mat-datepicker #datepicker>
                     <mat-datepicker-actions>
-                        <button mat-button matDatepickerCancel>Cancel</button>
-                        <button mat-raised-button color="primary" matDatepickerApply>
-              Apply
+                        <button mat-button matDatepickerCancel>Cancelar</button>
+                        <button mat-raised-button matDatepickerApply style="background-color: #3a3a3a; color: white">
+              Aplicar
             </button>
                     </mat-datepicker-actions>
                 </mat-datepicker>
