--- a/src/app/especialista/especialista.component.html
+++ b/src/app/especialista/especialista.component.html
@@ -1,4 +1,5 @@
-<div class="container-principal full-width">
+<ngx-loading [show]="preload" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+<div *ngIf="!preload" class="container-principal full-width">
     <div class="table-style" *ngIf="!isCreating">
         <span class="principal-title">LISTADO DE ESPECIALISTAS</span>
         <button class="btn-send" mat-raised-button type="button" (click)="crearEspecialista()">
