--- a/src/app/especialista/especialista.component.html
+++ b/src/app/especialista/especialista.component.html
@@ -5,6 +5,65 @@
         <button class="btn-send" mat-raised-button type="button" (click)="crearEspecialista()">
       <span>Crear</span>
     </button>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="codigo">
+                <th mat-header-cell *matHeaderCellDef>Código</th>
+                <td mat-cell *matCellDef="let element">{{ element.idEspecialista }}</td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.nombre }}
+                </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="fecha_nacimiento">
+                <th mat-header-cell *matHeaderCellDef style="text-align: center">
+                    Fecha de nacimiento
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.fechaDeNacimiento }}
+                </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="tarjeta">
+                <th mat-header-cell *matHeaderCellDef style="text-align: center">
+                    Tarjeta
+                </th>
+                <td mat-cell *matCellDef="let element" style="text-align: center">
+                    <span>{{ element.tarjetaProfesional }}</span>
+                </td>
+            </ng-container>
+            <!-- actions Column -->
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef style="text-align: center">
+                    Acciones
+                </th>
+                <td mat-cell *matCellDef="let element" style="text-align: center">
+                    <span class="badge badge-success">
+            <button mat-stroked-button>
+              <mat-icon style="color: grey" (click)="goToEdit(element)"
+                >edit</mat-icon
+              >
+            </button>
+            <button mat-stroked-button (click)="deleteEjercicio(element)">
+              <mat-icon style="color: grey">delete</mat-icon>
+            </button>
+          </span>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
     </div>
     <form *ngIf="isCreating" autocomplete="off" [formGroup]="especialistaForm" (ngSubmit)="crear()" style="width: 350px">
         <div>
