--- a/src/app/especialista/especialista.component.html
+++ b/src/app/especialista/especialista.component.html
@@ -12,7 +12,9 @@
             <!-- Position Column -->
             <ng-container matColumnDef="codigo">
                 <th mat-header-cell *matHeaderCellDef>Código</th>
-                <td mat-cell *matCellDef="let element">{{ element.idEspecialista }}</td>
+                <td mat-cell *matCellDef="let element" style="text-align: center">
+                    {{ element.idEspecialista }}
+                </td>
             </ng-container>
 
             <!-- Name Column -->
@@ -29,7 +31,7 @@
                     Fecha de nacimiento
                 </th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.fechaDeNacimiento }}
+                    {{ element.fechaDeNacimiento | date: "longDate" }}
                 </td>
             </ng-container>
 
