--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,7 @@
     padding: 20px;
     background-image: linear-gradient(315deg, #3a3a3a 0%, #636363 74%);
     z-index: 1;
+    width: 200px !important;
 }
 
 img {
@@ -56,4 +57,13 @@ img {
         color: white;
         cursor: pointer;
     }
+}
+
+li:hover {
+    text-align: start !important;
+    padding-left: 1em;
+    padding-right: 1em;
+    cursor: pointer;
+    transform: scale(0.97) !important;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
 }
