--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <img class="nav-icon" src="../../assets/img/pesa.png" alt="" />
         </div>
 
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" style="margin-top: 2em">
             <li class="nav-item active nav-item active">
                 <a class="nav-link" [routerLink]="'/inicio'">Inicio </a>
             </li>
