--- a/src/app/especialista/especialista.component.html
+++ b/src/app/especialista/especialista.component.html
@@ -78,7 +78,7 @@
     <div class="center-horizontal">
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Nombre</mat-label>
-        <input matInput formControlName="nombre" name="nombre" />
+        <input matInput formControlName="nombre" name="nombre" type="text" />
         <mat-error *ngIf="nombreIsInvalid"> *Campo requerido* </mat-error>
       </mat-form-field>
     </div>
